# sota-ops

./: .gitignore  CMakeLists.txt  README.md  setup.py
docker/: Dockerfile
include/sota_ops/: ball_query.h  ccl.h  disjoint_set.h  expand.h  iou.h  nms.h  reduce.h  seg_reduce.h
include/sota_ops/utils/: atomic.h  thrust_allocator.h
sota_ops/: __init__.py  ball_query.py  ccl.py  expand.py  iou.py  nms.py  reduce.py  seg_reduce.py  version.py  voxelize.py
src/: CMakeLists.txt
src/sota_ops/: CMakeLists.txt  ball_query.cpp  ccl.cpp  expand.cpp  iou.cpp  nms.cpp  reduce.cpp  seg_reduce.cpp
src/sota_ops/autograd/: reduce_autograd.cpp
src/sota_ops/cpu/: expand_cpu.cpp  nms_cpu.cpp
src/sota_ops/cuda/: ball_query_cuda.cu  ccl_cuda.cu  expand.cu  iou_cuda.cu  nms_cuda.cu  reduce_cuda.cu  seg_reduce_cuda.cu
